<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about">About</string>
    <string name="action_preferences">Preferences</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Magellan Launcher</string>
    <string name="app_not_started">"Can't start application"</string>
    <string name="date">Date:</string>
    <string name="history">History</string>
    <string name="history_format">History (%1$s)</string>
    <string name="history_limit">History limit</string>
    <string name="lastsbooks">Last downloaded books:</string>
    <string name="next">next</string>
    <string name="now_reading">Now reading:</string>
    <string name="path_not_exist">Path not exist!</string>
    <string name="path_to_library">Path to library</string>
    <string name="path_to_library_summary">Input full path</string>
    <string name="prev">prev</string>
    <string name="progress">Progress:</string>
    <string name="spent">Spent:</string>
    <string name="update_screen">Update screeb</string>
    <string name="version">Version</string>
    <string name="applications">Applications</string>
    <string name="icon_action">Action</string>
    <string name="icon_icon">Icon</string>
    <string name="clean_dirty_history">Clean dirty history</string>
    <string name="clean_dirty_history_success">Success clean dirty history</string>
    <string name="author">Author:</string>
    <string name="end_date">End date:</string>
    <string name="start_date">Start date:</string>
    <string name="time">Time:</string>
    <string name="title">Title:</string>
    <string name="history_clean_limit">History clean limit, ms</string>
    <string name="httpd">Book manager</string>
</resources>
