<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="@color/normal_fg">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:background="@drawable/preview_bg">
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" style="@style/ReaderTheme"
                android:padding="20dp" android:layout_weight="1">
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/author"
                    style="@style/ReaderTheme"
                    android:layout_weight="1"
                    android:textSize="18dp" android:textStyle="bold"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tw_author"
                    style="@style/ReaderTheme"
                    android:layout_weight="1"
                    android:textSize="18dp"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                >
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    style="@style/ReaderTheme"
                    android:layout_weight="1"
                    android:textSize="18dp" android:textStyle="bold"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tw_title"
                    style="@style/ReaderTheme"
                    android:layout_weight="1" android:textSize="18dp"/>
            </TableRow>
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" android:paddingTop="5dp" android:paddingBottom="5dp"
                    >
                <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/progress"
                        style="@style/ReaderTheme" android:layout_weight="1" android:textSize="18dp"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tw_progress" style="@style/ReaderTheme" android:layout_weight="1"
                        android:textSize="18dp"/>
            </TableRow>
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" android:paddingTop="5dp" android:paddingBottom="5dp"
                    >
                <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        style="@style/ReaderTheme" android:layout_weight="1" android:textSize="18dp"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tw_time" style="@style/ReaderTheme" android:layout_weight="1"
                        android:textSize="18dp"/>
            </TableRow>
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" android:paddingTop="5dp" android:paddingBottom="5dp"
                    >
                <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/start_date"
                        style="@style/ReaderTheme" android:layout_weight="1" android:textSize="18dp"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tw_startdate" style="@style/ReaderTheme" android:layout_weight="1"
                        android:textSize="18dp"/>
            </TableRow>
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" android:paddingTop="5dp"
                    android:paddingBottom="5dp">
                <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/end_date"
                        style="@style/ReaderTheme" android:layout_weight="1" android:textSize="18dp"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tw_enddate" style="@style/ReaderTheme" android:layout_weight="1"
                        android:textSize="18dp"/>
            </TableRow>
        </TableLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="3"
                android:paddingLeft="10dp" android:paddingRight="10dp">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/iw_icon" android:layout_weight="1" android:src="@drawable/book_img"
                    android:background="@drawable/preview_bg" android:layout_centerInParent="true"/>
        </RelativeLayout>
    </LinearLayout>
    <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/list_details" style="@style/ReaderTheme" android:background="@drawable/preview_bg"/>
</LinearLayout>