<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/normal_bg"
    android:paddingTop="15dp"
    android:paddingRight="10dp">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="90dp"
        android:id="@+id/history_image"
        android:src="@drawable/book_down"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingBottom="5dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="Flegg_Zharenyie_zelenyie_pomidoryi_v_kafe_Polustanok.71529.fb2.cite.txt"
            android:id="@+id/history_title"
            android:textColor="@color/normal_text"
            android:textSize="20dp"
            android:maxLines="2"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/progress"
                    android:textColor="@color/normal_text"
                    android:paddingRight="5dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:text="1/1"
                    android:id="@+id/history_progress"
                    android:textColor="@color/normal_text"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/spent"
                    android:textColor="@color/normal_text"
                    android:paddingRight="5dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:text="1ч 10м"
                    android:id="@+id/history_spent"
                    android:textColor="@color/normal_text"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/normal_text"
                    android:paddingRight="5dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:text="09/01/2015"
                    android:id="@+id/history_date"
                    android:textColor="@color/normal_text"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>